# WebServer.py

./: .gitignore  Manage.py  README.md  TODO  pyproject.toml  requirements.txt  setup.py
Backup/: WebServer.py  server.py
NetJin/: __init__.py
NetJin/config/: settings.py
NetJin/core/WebServer/: WebServer.py  WebServer.pyi  __init__.py
NetJin/core/base/: base.py  base.pyi
NetJin/http/: request.py  request.pyi  response.py  response.pyi
NetJin/utils/: __init__.py
Server/: WebServer.py  __init__.py
Server/Base/: BaseServer.py  __init__.py
Server/Configurations/Settings/: Settings.py
Server/Keyboard/: KeyboardEventManager.py
Server/Types/: __init__.py
Server/Utils/Request/: Request.py  __init__.py
Server/Utils/Response/: Response.py  __init__.py
Server/Utils/utils/: content_type.py  utils.py
WebServer/: __init__.py
WebServer/Base/: ServerBase.py  ServerBase.pyi  __init__.py
WebServer/Configurations/Settings/: __init__.py
WebServer/Templates/Errors/: 404.html
WebServer/Utils/Request/: Request.py  Request.pyi
WebServer/Utils/Response/: Response.py  Response.pyi
WebServer/Utils/utils/: __init__.py  content_type.py  render_template.py  utils.py
WebServer/cli/: __init__.py
WebServer/config/: __init__.py
WebServer/config/settings/: __init__.py  settings.py
WebServer/core/: WebServer.py  WebServer.pyi
WebServer/core/WebServer/: WebServer.py  WebServer.pyi  __init__.py
WebServer/core/_base/: base.py  base.pyi
WebServer/core/base/: base.py  base.pyi
WebServer/http/: request.py  request.pyi  response.py
WebServer/http/Request/: Request.py  Request.pyi
WebServer/http/Response/: Response.py  Response.pyi
WebServer/types/: __init__.py
WebServer/views/errors/: NotFound.html
example/: main.py
example/config/: settings.py
example/static/css/: style.css
example/views/: about.html  contact.html  index.html
