[project]
name = "WebServer"
version = "1.0.0"
description = "WebServer.py is a lightweight web server implemented in Python using sockets. It provides a simple implementation of the HTTP protocol, allowing users to build and run web applications with ease."
readme = "README.md"
license = "ISC"
requires-python = ">=3.13"
urls = { homepage = "https://github.com/sachin-acharya-projects/WebServer.py" }
keywords = ["Webserver", "WebFramework", "PythonFramework"]
authors = [
    { name = "Sachin Acharya", email = "webserver.py.connect@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = ["colorama>=0.4.6", "jinja2>=3.1.4"]

[dependency-groups]
dev = ["djlint>=1.36.1", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = "./.uv_cache"
